# Illera1999Project_NDR_ROS2_UR05

./: .gitignore  README.md
src/my_cpp_interfaces/: CMakeLists.txt  package.xml
src/my_cpp_interfaces/msg/: DataRight.msg  DataRightBVH.msg
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/neuron_reader/include/: DataType.h  NeuronDataReader.h
src/my_cpp_pkg/src/: readExport.cpp  readExport_BVH.cpp  template_cpp_node.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: calculate_angle.py  combination_angle.py  datos.txt  import_data.py  import_dataBVH.py  move_robot.py  prueba.py
